Remove comment lines

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -54,7 +54,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <!-- File list will be populated here -->
+                                <!-- File list -->
                             </tbody>
                         </table>
                     </div>
@@ -63,18 +63,17 @@
                 <div class="unfinished-list" style="display: none;">
                     <div id="unfinished-download-list">
                         <h2>Unfinished Downloads</h2>
-                        <!-- Unfinished downloads will be populated here -->
+                        <!-- Unfinished downloads -->
                     </div>
                     <div id="unfinished-upload-list">
                         <h2>Unfinished Uploads</h2>
-                        <!-- Unfinished uploads will be populated here -->
+                        <!-- Unfinished uploads -->
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Scripts remain unchanged -->
     <script type="module" src="renderer/main.js"></script>
     <script type="module" src="renderer/fileHandlers.js"></script>
     <script type="module" src="renderer/uiHandlers.js"></script>
